--- a/scss/blocks/accordion.scss
+++ b/scss/blocks/accordion.scss
@@ -15,7 +15,7 @@
     display: inline-block;
     vertical-align: middle;
     font-family: $font-family--Open-sans;
-    font-size: 16px;
+    font-size: 1.33rem;
     font-weight: 400;
   }
 
@@ -23,7 +23,7 @@
     font-family: $font-family--Open-sans;
     background: $base-white;
     color: $base-red;
-    font-size: 14px;
+    font-size: 1.16rem;
     font-weight: 400;
     padding: 1rem;
     margin: 0;
