--- a/scss/blocks/features-list.scss
+++ b/scss/blocks/features-list.scss
@@ -36,8 +36,8 @@
     display: inline-block;
     font-family: $font-family--Oswald;
     font-weight: 700;
-    font-size: 32px;
-    line-height: 36px;
+    font-size: 2.66rem;
+    line-height: 2.66rem;
     color: $base-red;
     margin-bottom: 2rem;
   }
@@ -45,8 +45,8 @@
   &__text {
     font-family: $font-family--Open-sans;
     font-weight: 400;
-    font-size: 13px;
-    line-height: 21px;
+    font-size: 1.08rem;
+    line-height: 1.75rem;
     color: $base-grey;
     text-align: left;
   }
