--- a/scss/blocks/home.scss
+++ b/scss/blocks/home.scss
@@ -2,9 +2,9 @@
 
   &__title {
     font-family: $font-family--Oswald;
-    font-size: 36px;
+    font-size: 3rem;
     margin: 0 auto;
-    line-height: 40px;
+    line-height: 3.33rem;
     text-align: center;
     color: $base-red;
     width: 100%;
