--- a/scss/blocks/order.scss
+++ b/scss/blocks/order.scss
@@ -7,7 +7,7 @@
 
   &__link {
     font-family: $font-family--Oswald;
-    font-size: 54px;
+    font-size: 4.5rem;
     color: $base-white;
     text-align: center;
     letter-spacing: 0.03em;
