--- a/scss/blocks/slider.scss
+++ b/scss/blocks/slider.scss
@@ -3,7 +3,7 @@
 
   &__item{
     position: relative;
-    display: flex !important;
-    justify-content: space-between;
+    //display: flex !important;
+    //justify-content: space-between;
   }
 }
