--- a/scss/base.scss
+++ b/scss/base.scss
@@ -5,15 +5,15 @@ html {
     font-size: 10px;
   }
 
-  @media only screen and (max-width : 1024px) {
-    font-size: 10px;
+  @media only screen and (max-width : 768px) {
+    font-size: 8px;
   }
 }
 
 body {
   color: $base-white;
   font-weight: 400;
-  line-height: 21px;
+  line-height: 1.75rem;
 }
 
 * {
@@ -53,11 +53,10 @@ body {
 .main-logo {
   font-family: Raleway, Arial, sans-serif;
   font-weight: 900;
-  font-size: 15px;
-  line-height: 24px;
+  font-size: 1.25rem;
+  line-height: 2rem;
   display: block;
   width: 140px;
-  height: 20px;
   text-decoration: none;
   text-align: center;
   color: $base-white;
@@ -77,7 +76,7 @@ body {
   font-family: $font-family--Oswald;
   font-size: $font-size--section-title;
   margin: 0;
-  line-height: 21px;
+  line-height: 4.5rem;
   text-align: center;
 }
 
@@ -113,9 +112,9 @@ body {
 
 .section-subtitle {
   font-family: $font-family--Open-sans;
-  font-size: 12px;
+  font-size: 1rem;
   font-weight: 400;
-  line-height: 21px;
+  line-height: 1.75rem;
   color: #9b9b9b;
   text-align: center;
   margin-right: auto;
@@ -123,6 +122,10 @@ body {
   margin-top: 0;
   margin-left: auto;
   margin-bottom: 5.33rem;
+
+  @media screen and (max-width: 692px) {
+    width: 90%;
+  }
 }
 
 .list {
@@ -155,7 +158,7 @@ body {
   font-family: $font-family--Open-sans;
   font-size: 16px;
   font-weight: 400;
-  line-height: 21px;
+  line-height: 1.75rem;
   color: $base-red;
   text-align: center;
 }
