--- a/scss/blocks/contacts.scss
+++ b/scss/blocks/contacts.scss
@@ -6,16 +6,16 @@
     justify-content: center;
     padding: 1rem;
     background-color: #bd4141;
-    font-size: 12px;
+    font-size: 1rem;
     transform: scale(-1, 1);
   }
 
   &__number {
     display: inline-block;
     font-family: $font-family--Oswald;
-    font-size: 14px;
+    font-size: 1.16rem;
     font-weight: 400;
-    line-height: 21px;
+    line-height: 1.75rem;
     padding: 1rem 2.33rem;
     background-color: $base-red;
     margin: 0;
