--- a/scss/blocks/features.scss
+++ b/scss/blocks/features.scss
@@ -2,7 +2,7 @@
 
   &__title {
     font-family: $font-family--Oswald;
-    font-size: 30px;
+    font-size: 2.5rem;
     color: $base-black;
     text-align: center;
     margin-top: 0;
@@ -16,7 +16,7 @@
 
   &__subtitle {
     font-family: $font-family--Oswald;
-    font-size: 26px;
+    font-size: 2.16rem;
     color: $base-black;
     text-align: center;
     margin: 0 auto;
@@ -26,10 +26,10 @@
 
   &__text {
     font-family: $font-family--Oswald;
-    font-size: 18px;
+    font-size: 1.5rem;
     text-align: center;
     color: $base-grey;
-    line-height: 22px;
+    line-height: 1.83rem;
     letter-spacing: 1.5px;
     max-width: 90%;
     margin: 0 auto;
