--- a/scss/blocks/footer-feedback.scss
+++ b/scss/blocks/footer-feedback.scss
@@ -14,9 +14,9 @@
 
   &__title {
     font-family: $font-family--Oswald;
-    font-size: 14px;
+    font-size: 1.16rem;
     font-weight: 700;
-    line-height: 21px;
+    line-height: 1.75rem;
     margin-top: 5.42rem;
     margin-bottom: 2.5rem;
   }
@@ -27,9 +27,9 @@
   &__copyright,
   &__link {
     font-family: $font-family--Open-sans;
-    font-size: 12px;
+    font-size: 1rem;
     font-weight: 300;
-    line-height: 21px;
+    line-height: 1.75rem;
     color: #6f6f6f;
     margin: 0;
   }
@@ -44,6 +44,10 @@
 
   &__email {
     margin-bottom: 12.33rem;
+
+    @media screen and (max-width: 768px) {
+      margin-bottom: 2rem;
+    }
   }
 
   &__link-wrapper {
@@ -132,15 +136,15 @@
     justify-content: center;
     padding: 1rem;
     background-color: #060606;
-    font-size: 12px;
+    font-size: 1rem;
     transform: scale(-1, 1);
   }
 
   &__adress {
     font-family: $font-family--Oswald;
-    font-size: 14px;
+    font-size: 1.16rem;
     font-weight: 400;
-    line-height: 21px;
+    line-height: 1.75rem;
     padding: 1rem 2.33rem;
     background-color: $base-black;
     margin: 0;
@@ -155,7 +159,7 @@
     justify-content: center;
     padding: 1rem;
     background-color: #060606;
-    font-size: 12px;
+    font-size: 1rem;
     transform: scale(-1, 1);
   }
 
@@ -168,9 +172,9 @@
   &__number {
     display: inline-block;
     font-family: $font-family--Oswald;
-    font-size: 14px;
+    font-size: 1.16rem;
     font-weight: 400;
-    line-height: 21px;
+    line-height: 1.75rem;
     padding: 1rem 2.33rem;
     background-color: $base-black;
     margin: 0;
