--- a/scss/blocks/idea.scss
+++ b/scss/blocks/idea.scss
@@ -2,20 +2,23 @@
 
   &__title {
     font-family: $font-family--Oswald;
-    font-size: 54px;
+    font-size: 4.5rem;
     margin: 0 auto;
-    line-height: 50px;
+    line-height: 4rem;
     text-align: center;
     color: $base-red;
     width: 100%;
     margin-bottom: 3rem;
+    @media screen and (max-width: 652px) {
+      line-height: 5.2rem;
+    }
   }
 
   &__text {
     font-family: $font-family--Oswald;
-    font-size: 30px;
+    font-size: 2.5rem;
     margin: 0 auto;
-    line-height: 30px;
+    line-height: 2.5rem;
     letter-spacing: 1px;
     text-align: center;
     color: $base-black;
@@ -23,7 +26,7 @@
     margin-bottom: 5rem;
 
     &--small {
-      font-size: 16px;
+      font-size: 1.33rem;
       color: $base-grey;
     }
   }
@@ -32,9 +35,24 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    @media screen and (max-width: 652px) {
+      flex-direction: column;
+    }
   }
 
   &__image {
     margin-left: 3rem;
+
+    @media screen and (max-width:650px) {
+      margin-left: 0;
+    }
+
+    @media screen and (max-width:450px) {
+      width: 100%;
+      margin-left: 3rem;
+      margin-right: 3rem;
+    }
+
   }
 }
