--- a/scss/blocks/main-navigation.scss
+++ b/scss/blocks/main-navigation.scss
@@ -14,6 +14,10 @@
     @media only screen and (min-width : 768px) and (max-width : 1024px) {
       margin-left: 2rem;
     }
+
+    @media only screen and (max-width : 768px) {
+      min-width: 105px;
+    }
   }
 
   &__item:first-child .main-navigation__link {
@@ -29,7 +33,7 @@
 
   &__link {
     font-family: $font-family--Oswald;
-    font-size: 14px;
+    font-size: 1.16rem;
     font-weight: 400;
     display: block;
     padding: 1rem 1.25rem;
