--- a/scss/blocks/main.scss
+++ b/scss/blocks/main.scss
@@ -21,29 +21,29 @@
 
   &__feedback-content {
     font-family: $font-family--Open-sans;
-    font-size: 13px;
+    font-size: 1.08rem;
     font-weight: 300;
-    line-height: 22px;
+    line-height: 1.83rem;
     color: #c4c4c4;
     margin: 0;
   }
 
   &__feedback-text {
     font-family: $font-family--Open-sans;
-    font-size: 13px;
+    font-size: 1.08rem;
     font-weight: 300;
-    line-height: 22px;
+    line-height: 1.83rem;
     color: #c4c4c4;
     opacity: 0.6;
   }
 
   &__logo {
-    font-size: 25px;
+    font-size: 2.08rem;
     color: $white;
   }
 
   &__icon {
-    font-size: 14px;
+    font-size: 1.16rem;
   }
 
   &__link {
