--- a/scss/blocks/plan-list.scss
+++ b/scss/blocks/plan-list.scss
@@ -4,8 +4,8 @@
 
   &__item {
     font-family: $font-family--Open-sans;
-    font-size: 12px;
-    line-height: 21px;
+    font-size: 1rem;
+    line-height: 1.75rem;
 
     &::before {
       content: '✔';
