--- a/scss/blocks/pricing-list.scss
+++ b/scss/blocks/pricing-list.scss
@@ -43,25 +43,25 @@
   &__title,
   &__price {
     font-family: $font-family--Oswald;
-    font-size: 18px;
-    line-height: 21px;
+    font-size: 1.5rem;
+    line-height: 1.75rem;
     font-weight: 700;
   }
 
   &__subtitle {
     font-family: $font-family--Oswald;
-    font-size: 14px;
-    line-height: 21px;
+    font-size: 1.16rem;
+    line-height: 1.75rem;
     font-weight: 700;
   }
 
   &__icon {
-    font-size: 25px;
+    font-size: 2.08rem;
   }
 
   &__link {
     font-family: "Oswald",Arial,sans-serif;
-    font-size: 20px;
+    font-size: 1.66rem;
     color: #fefefe;
     text-align: center;
     letter-spacing: 0.03em;
