--- a/scss/blocks/team-list.scss
+++ b/scss/blocks/team-list.scss
@@ -34,18 +34,22 @@
 
   &__title {
     font-family: $font-family--Open-sans;
-    font-size: 18px;
-    line-height: 24px;
+    font-size: 1.5rem;
+    line-height: 2rem;
     font-weight: 700;
     color: $base-white;
     margin: 0;
     text-align: center;
   }
 
+  &__photo {
+    width: 100%;
+  }
+
   &__text {
     font-family: $font-family--Oswald;
-    font-size: 12px;
-    line-height: 24px;
+    font-size: 1rem;
+    line-height: 2rem;
     font-weight: 400;
     color: #c4c4c4;
     margin: 0;
