--- a/scss/blocks/team.scss
+++ b/scss/blocks/team.scss
@@ -3,9 +3,9 @@
 
   &__subtitle {
     font-family: $font-family--Oswald;
-    font-size: 12px;
+    font-size: 1rem;
     font-weight: 400;
-    line-height: 12px;
+    line-height: 1rem;
     color: #3a3733;
     text-align: center;
     margin: 0 auto;
