--- a/scss/blocks/order.scss
+++ b/scss/blocks/order.scss
@@ -14,7 +14,7 @@
     text-decoration: none;
     background-color: $base-red;
     padding: 2rem;
-    border-radius: 1rem;
+    //border-radius: 1rem;
 
     &:hover {
       box-shadow: 0 0 10px rgba(0,0,0,0.9);
