--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,7 +2,10 @@
 @import "variables";
 @import "base";
 @import "blocks/header";
+@import "blocks/name";
 @import "blocks/main-navigation";
+@import "blocks/popup";
+@import "blocks/form-popup";
 @import "blocks/slider";
 @import "blocks/slider-home";
 @import "blocks/slider-partners";
