--- a/scss/blocks/form-popup.scss
+++ b/scss/blocks/form-popup.scss
@@ -72,11 +72,15 @@
   }
 
   &__button-close {
-    background: url("../img/btn-close.png");
+    background-image: url(../img/btn-close.png);
     background-repeat: no-repeat;
-    top: 0;
-    left: 100%;
+    height: 15px;
+    top: 5px;
+    cursor: pointer;
+    border: none;
+    background-size: 100%;
     position: absolute;
+    right: 5px;
   }
 
 }
