--- a/scss/blocks/name.scss
+++ b/scss/blocks/name.scss
@@ -1,23 +1,38 @@
 .name {
-  background: url("../img/name-bg.jpg") no-repeat;
-  background-size: cover;
-  padding-top: 10rem;
-  padding-bottom: 10rem;
+  position: relative;
 
+  &__background {
+    width: 100%;
+  }
 
   &__title {
+    position: absolute;
     font-family: $font-family--Oswald;
-    font-size: 4rem;
-    margin: 0 auto;
+    font-size: 3.5rem;
     line-height: 4.5rem;
     text-align: center;
     color: $base-red;
-    width: 100%;
-    margin-bottom: 3rem;
-    margin-left: 20rem;
+    width: 50%;
+    margin: 0;
+    margin-left: auto;
+    right: 7%;
+    top: 50%;
+    transform: translateY(-50%);
+
+    @media screen and (max-width: 1096px) {
+      font-size: 3rem;
+      line-height: 3.5rem;
+      }
+
+    @media screen and (max-width: 650px) {
+      font-size: 2rem;
+      line-height: 2.5rem;
+    }
+
+    @media screen and (max-width: 425px) {
+      font-size: 1.5rem;
+      line-height: 2rem;
+    }
   }
 
-    //@media screen and (max-width: 652px) {
-    //  line-height: 5.2rem;
-    //}
 }
