--- a/scss/blocks/popup.scss
+++ b/scss/blocks/popup.scss
@@ -17,6 +17,10 @@
     border-radius:5px;
     box-shadow: 0 0 1rem #000;
     transform: translate(-50%, -50%);
+
+    @media only screen and (max-width : 768px) {
+      width: 80%;
+    }
   }
 
   &__text {
