--- a/scss/blocks/slider-home.scss
+++ b/scss/blocks/slider-home.scss
@@ -42,7 +42,6 @@
     background-color: $base-black;
     margin: 0;
     opacity: 0.8;
-    //margin-bottom: 2px;
     max-width: 35%;
 
     @media only screen and (max-width : 1024px) {
@@ -52,7 +51,9 @@
     }
 
     @media only screen and (max-width : 568px) {
-      display: none;
+      font-size: 1.5rem;
+      line-height: 2rem;
+      margin-left: 5rem;
     }
   }
 
